# DlibModule

./: CMakeLists.txt  main.cc
configs/: bounds.json  config.json  dataset.json  postprocess.json  preprocess.json
include/network/: dnn_instance.h  dnn_instance_segmentation_ex.h  structures.h
include/train/: dlibcase.h  mainloop.h
src/train/: dlibcase.cc  mainloop.cc
